Blog - gestion des tags (suite) + update jquery et jqueryUI

--- a/src/Aml/Bundle/WebBundle/Resources/views/Admin/layout.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Admin/layout.html.twig
@@ -36,8 +36,8 @@
     	
     
     
-    <script src="{{ asset('bundles/amlweb/js/jquery.js') }}"></script>
-    <script src="{{ asset('bundles/amlweb/js/jquery-ui-1.8.23.custom.min.js') }}"></script>
+    <script src="{{ asset('bundles/amlweb/js/jquery/jquery.1.9.1.min.js') }}"></script>
+    <script src="{{ asset('bundles/amlweb/js/jquery/jquery-ui-1.10.0.min.js') }}"></script>
     <script src="{{ asset('bundles/amlweb/js/fullcalendar/fullcalendar.js') }}"></script>
     {% block headerJs %}{% endblock %}
   </head>
@@ -99,7 +99,7 @@
     <script src="{{ asset('bundles/amlweb/js/bootstrap/bootstrap-typeahead.js') }}"></script>
     <script src="{{ asset('bundles/amlweb/js/bootstrap/bootstrap-datepicker.js') }}"></script>
     
-    {% block endJS %}{% endblock %}
+    {% block javascripts %}{% endblock %}
 
   </body>
 </html>
