--- a/src/Aml/Bundle/BlogBundle/Resources/views/Admin/Blog/new.html.twig
+++ b/src/Aml/Bundle/BlogBundle/Resources/views/Admin/Blog/new.html.twig
@@ -16,7 +16,24 @@
 		<h1>Créer un nouvel article de blog</h1>
 
 		<form class="form-horizontal" action="{{ path('admin_content_blog_create') }}" method="post" {{ form_enctype(form) }}>
-		    {{ form_widget(form) }}
+		    {{ form_row(form.title) }}
+		    {{ form_row(form.body) }}
+
+            <div class="control-group">
+                <label class="control-label" for="tumblr_addtags">{{ form_label(form.addtags)  }}</label>
+                <div class="controls manage-tags-container">
+                    <div class="input-append manage-tags">
+                        {{ form_widget(form.addtags)  }}<button id="blog-button-add-tag" class="btn" type="button"><i class="icon-chevron-right"></i></button>
+                    </div>
+                    {% set tagDataPrototype = '<span>__name__</span><button class="close" >&times;</button><input type="hidden" name="aml_bundle_BlogBundle_blogtype[tags][]" value="__id__" />' %}
+                    <div id="tumblr_tags" class="tags pull-right manage-tags" data-prototype="{{ tagDataPrototype }}">
+
+                    </div>
+
+                </div>
+            </div>
+
+		    {{ form_rest(form) }}
             <div class="form-actions">
                 <a class="btn btn-link" href="{{ path('admin_content_blog') }}">
                     <i class="icon-arrow-left"></i> Retour à la liste des articles
@@ -34,14 +51,33 @@
 
 {% endblock body %}
 
-
-
 {% block javascripts %}
     {{ form_javascript(form) }}
 
     <script src="{{ asset('bundles/amlblog/js/manageTags.js') }}" type="text/javascript"></script>
     <script type="text/javascript">
         tags.urlLoadTag = '{{ url('blog_tags_load_item') }}';
+
+        tags.init = function(){
+            this.form = $('#tumblr-add-content');
+            this.containerSelectedTags = $('#container-selected-tags');
+
+            // Get the div that holds the collection of tags
+            this.collectionHolder = $('#tumblr_tags');
+
+            // count the current form inputs we have (e.g. 2), use that as the new
+            // index when inserting a new item (e.g. 2)
+            this.collectionHolder.data('index', this.collectionHolder.find(':input').length);
+            this.tags = new Array();
+
+            this.addTagButton = $('#tumblr-button-add-tag');
+            this.autocompleteField = $('#autocompleter_tumblr_addtags');
+            this.removeTagButton = this.collectionHolder.find('button.close');
+
+            this.observeAddTag();
+            this.observeRemoveTag();
+        };
+
         tags.init();
     </script>
 {% endblock javascripts %}
