--- a/src/Aml/Bundle/WebBundle/Resources/views/layout.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/layout.html.twig
@@ -16,7 +16,7 @@
     	<link href="{{ asset('bundles/amlweb/css/form.css') }}" rel="stylesheet">
     	<link href="{{ asset('bundles/amlweb/css/texte.css') }}" rel="stylesheet">
     	
-    	{% block css %}{% endblock %}
+    	{% block stylesheets %}{% endblock %}
     	
     	{% block headerJs %}{% endblock %}
 	</head>
