--- a/src/Aml/Bundle/BlogBundle/Resources/views/Admin/Blog/edit.html.twig
+++ b/src/Aml/Bundle/BlogBundle/Resources/views/Admin/Blog/edit.html.twig
@@ -15,8 +15,26 @@
 	<div class="span5">
 		<h1>Blog edit</h1>
 		
-		<form  class="form-horizontal" action="{{ path('admin_content_blog_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
-		    {{ form_widget(edit_form) }}
+		<form class="form-horizontal" action="{{ path('admin_content_blog_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
+            {{ form_row(edit_form.title) }}
+            {{ form_row(edit_form.body) }}
+            {{ form_row(edit_form.category) }}
+
+            <div class="control-group">
+                <label class="control-label" for="tumblr_addtags">{{ form_label(edit_form.addtags)  }}</label>
+                <div class="controls manage-tags-container">
+                    <div class="input-append manage-tags">
+                        {{ form_widget(edit_form.addtags)  }}<button id="blog-button-add-tag" class="btn" type="button"><i class="icon-chevron-right"></i></button>
+                    </div>
+                    {% set tagDataPrototype = '<span>__name__</span><button class="close" >&times;</button><input type="hidden" name="aml_bundle_BlogBundle_blogtype[tags][]" value="__id__" />' %}
+                    <div id="tumblr_tags" class="tags pull-right manage-tags" data-prototype="{{ tagDataPrototype }}">
+
+                    </div>
+
+                </div>
+            </div>
+
+            {{ form_rest(edit_form) }}
 		    <div class="form-actions">
                 <a class="btn btn-link" href="{{ path('admin_content_blog') }}">
                     <i class="icon-arrow-left"></i> Retour à la liste des articles
