--- a/src/Aml/Bundle/BlogBundle/Resources/views/Blog/pagination.html.twig
+++ b/src/Aml/Bundle/BlogBundle/Resources/views/Blog/pagination.html.twig
@@ -1,4 +1,5 @@
 {# Pagination Blog #}
+{% if pagination.nbEntities > pagination.limit %}
 <div class="pagination pagination-centered">
 		<ul>	
 			{% if pagination.currentPage > 1 %}						
@@ -20,5 +21,5 @@
 				<li class=""><a class="active" title="Aller à la dernière page" href="{{ path('blog', { 'page': pagination.lastPage }) }}">dernier&nbsp;»</a></li>
 			{% endif %}
 		</ul>
-		
 </div>
+{% endif %}
