--- a/src/Aml/Bundle/WebBundle/Resources/views/Admin/Album/index.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Admin/Album/index.html.twig
@@ -14,7 +14,13 @@
 
 	<div class="span5">
 		<h1>Liste des albums</h1>
-		
+
+        <div class="form-actions">
+            <a class="btn btn-link" href="{{ path('content_album_new') }}">
+                <i class="icon-plus"></i> Ajouter un nouvel Album
+            </a>
+        </div>
+
 		<table class="table table-bordered table-striped">
 		    <thead>
 		        <tr>
@@ -25,27 +31,24 @@
 		        </tr>
 		    </thead>
 		    <tbody>
-		    {% for entity in entities %}
-		        <tr>
-		            <td><a href="{{ path('discographie_album', { 'id': entity.id }) }}">{{ entity.title }}</a></td>		                       
-		            <td>{% if entity.date %}{{ entity.date|date('d/m/Y') }}{% endif%}</td>
-		            <td>{{ entity.public|publicStatus }}</td>
-		            <td>
-		            	<a class="btn btn-link" href="{{ path('content_album_show', { 'id': entity.id }) }}">Voir</a>
-		                <a class="btn btn-link" href="{{ path('content_album_edit', { 'id': entity.id }) }}"><i class="icon-pencil"></i> Modifier</a>		        
-		            </td>
-		        </tr>
-		    {% endfor %}
+            {% if entities is not empty  %}
+                {% for entity in entities %}
+                    <tr>
+                        <td><a href="{{ path('discographie_album', { 'id': entity.id }) }}">{{ entity.title }}</a></td>
+                        <td>{% if entity.date %}{{ entity.date|date('d/m/Y') }}{% endif%}</td>
+                        <td>{{ entity.public|publicStatus }}</td>
+                        <td>
+                            <a class="btn btn-link" href="{{ path('content_album_show', { 'id': entity.id }) }}"><i class="icon-folder-open"></i> Voir</a>
+                            <a class="btn btn-link" href="{{ path('content_album_edit', { 'id': entity.id }) }}"><i class="icon-pencil"></i> Modifier</a>
+                        </td>
+                    </tr>
+                {% endfor %}
+            {% else %}
+                <td colspan="4">Aucun album enregistré</td>
+            {% endif %}
 		    </tbody>
 		</table>
-		
-		<ul>
-		    <li>
-		        <a href="{{ path('content_album_new') }}">
-		             <i class="icon-pencil"></i> Ajouter un nouvel Album
-		        </a>
-		    </li>
-		</ul>
+
 	</div>
 </div>
 {% endblock body %}
