--- a/src/Aml/Bundle/WebBundle/Resources/views/Admin/Link/index.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Admin/Link/index.html.twig
@@ -16,8 +16,14 @@
 
 	<div class="span5">
 	
-		<h1>Liens</h1>
-		
+		<h1>Gestion des liens</h1>
+
+        <div class="form-actions">
+            <a class="btn btn-link" href="{{ path('content_link_new') }}">
+                <i class="icon-plus"></i> Ajouter un lien
+            </a>
+        </div>
+
 		<table class="table table-bordered table-striped">
 		    <thead>
 		        <tr>
@@ -28,32 +34,29 @@
 		        </tr>
 		    </thead>
 		    <tbody>
-		    {% for entity in entities %}
-		        <tr>		            
-		            <td><a href="{{ path('content_link_show', { 'id': entity.id }) }}">{{ entity.description }}</a></td>
-		            <td>{{ entity.url }}</td>
-		            <td>{{ entity.public|publicStatus }}</td>
-		            <td>
-		                <ul class="nav">
-		                    <li>
-		                        <a class="btn btn-link" href="{{ path('content_link_edit', { 'id': entity.id }) }}" title="Modifier le lien">
-		                        	<i class="icon-pencil"></i> Modifier
-		                        </a>
-		                    </li>		                    
-		                </ul>
-		            </td>
-		        </tr>
-		    {% endfor %}
+            {% if entities is not empty  %}
+                {% for entity in entities %}
+                    <tr>
+                        <td>{{ entity.description }}</td>
+                        <td>{{ entity.url }}</td>
+                        <td>{{ entity.public|publicStatus }}</td>
+                        <td>
+                            <ul class="nav">
+                                <li>
+                                    <a class="btn btn-link" href="{{ path('content_link_edit', { 'id': entity.id }) }}" title="Modifier le lien">
+                                        <i class="icon-pencil"></i> Modifier
+                                    </a>
+                                </li>
+                            </ul>
+                        </td>
+                    </tr>
+                {% endfor %}
+            {% else %}
+                <td colspan="4">Aucune lien enregistré</td>
+            {% endif %}
 		    </tbody>
 		</table>
-		
-		<ul>
-		    <li>
-		        <a class="btn btn-primary" href="{{ path('content_link_new') }}">
-		             <i class="icon-pencil"></i> Ajouter un lien
-		        </a>
-		    </li>
-		</ul>
+
 	</div>
 </div>
 {% endblock body %}
