EvenementsBundle : - ajout bootstrap-datapicker avec les traductions - ajout liaison evenements/articlesBlog - corrections gestion des évènements - Ajouts extensions Twig - mise en place de l'agenda en front

--- a/src/Aml/Bundle/BlogBundle/Resources/views/Admin/Blog/new.html.twig
+++ b/src/Aml/Bundle/BlogBundle/Resources/views/Admin/Blog/new.html.twig
@@ -83,6 +83,6 @@
     </script>
 {% endblock javascripts %}
 
-{% block css %}
+{% block stylesheets %}
     {{ form_stylesheet(form) }}
 {% endblock %}
