--- a/src/Aml/Bundle/WebBundle/Resources/views/Admin/Navigation/navbar.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Admin/Navigation/navbar.html.twig
@@ -1,5 +1,5 @@
 {# Template de la barre de navigation de l'espace admin #}
-<div class="navbar navbar-fixed-top">
+<div class="navbar navbar-inverse navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container-fluid">
       <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
