--- a/src/Aml/Bundle/EvenementsBundle/Resources/views/Admin/Agenda/edit.html.twig
+++ b/src/Aml/Bundle/EvenementsBundle/Resources/views/Admin/Agenda/edit.html.twig
@@ -1,5 +1,7 @@
 {% extends "AmlWebBundle::Admin/layout.html.twig" %}
 
+{% form_theme edit_form 'AmlWebBundle:Form:aml_theme.html.twig' %}
+
 {% block title -%}
     Editer l'évènement "{{ entity.title }}"
 {%- endblock title %}
@@ -10,28 +12,76 @@
 	</div>		
 
 	<div class="span5">
-<h1>Editer l'évènement "{{ entity.title }}"</h1>
+        <h1>Editer l'évènement "{{ entity.title }}"</h1>
 
-<form action="{{ path('admin_agenda_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
-    {{ form_widget(edit_form) }}
-     <div class="form-actions">
-	   	<a href="{{ path('admin_agenda') }}" class="btn btn-link" title="Retourner à la liste des évènements">
-	       	<i class="icon-arrow-left"></i>
-	           retour à la liste des évènements
-	    </a>
-	       
-	    <button class="btn btn-primary pull-right" type="submit">Enregistrer</button>
-	  </div>
-</form>
+        <form class="form-horizontal" action="{{ path('admin_agenda_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
+            {{ form_widget(edit_form) }}
+             <div class="form-actions">
+                <a href="{{ path('admin_agenda') }}" class="btn btn-link" title="Retourner à la liste des évènements">
+                    <i class="icon-arrow-left"></i>
+                       retour à la liste des évènements
+                </a>
 
-<ul class="record_actions">
- 
-    <li>
-        <form action="{{ path('admin_agenda_delete', { 'id': entity.id }) }}" method="post">
-            {{ form_widget(delete_form) }}
-            <button type="submit">Delete</button>
+                <button class="btn btn-primary pull-right" type="submit">Enregistrer</button>
+              </div>
         </form>
-    </li>
-</ul>
+
+        <ul class="record_actions">
+
+            <li>
+                <form action="{{ path('admin_agenda_delete', { 'id': entity.id }) }}" method="post">
+                    {{ form_widget(delete_form) }}
+                    <button class="btn btn-danger" type="submit">Supprimer</button>
+                </form>
+            </li>
+        </ul>
+    </div>
+</div>
+{# CONFIG CKEDITOR #}
+{% include "AmlWebBundle::Admin/Partial/ckeditor.html.twig" with {'target': 'aml_bundle_evenementsbundle_concerttype_description'}  %}
 
 {% endblock body %}
+
+
+{% block javascripts %}
+
+    <script src="{{ asset('bundles/amlweb/js/bootstrap/bootstrap-datepicker.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/amlweb/js/bootstrap/locales/bootstrap-datepicker.fr.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/amlweb/js/bootstrap/bootstrap-timepicker.js') }}" type="text/javascript"></script>
+    <script type="text/javascript">
+        $('#aml_bundle_evenementsbundle_concerttype_dateStart_date').datepicker({
+            'format' : 'dd/mm/yyyy',
+            'weekStart' : 1,
+            'language' : 'fr'
+        }).on('changeDate', function(ev){
+                    $('#aml_bundle_evenementsbundle_concerttype_dateStart_date').datepicker('hide');
+                });
+
+        $('#aml_bundle_evenementsbundle_concerttype_dateStart_time').timepicker({
+            template : 'dropdown',
+            showInputs: false,
+            defaultTime: 'value',
+            showMeridian: false
+        });
+
+        /*  $('#date_evenement').datepicker({'format' : 'dd/mm/yyyy', 'weekStart' : 1, 'language' : 'fr'}).on('changeDate', function(ev){
+         $('#date_evenement').datepicker('hide');
+         });
+
+         $('#creation_evenement_date_time').timepicker({
+         template : 'dropdown',
+         showInputs: false,
+         defaultTime: 'value',
+         showMeridian: false
+         });      */
+
+    </script>
+
+{% endblock %}
+
+{% block stylesheets %}
+
+    <link href="{{ asset('bundles/amlweb/css/bootstrap/datepicker.css') }}" rel="stylesheet">
+    <link href="{{ asset('bundles/amlweb/css/bootstrap/timepicker.css') }}" rel="stylesheet">
+
+{% endblock %}
