--- a/src/Aml/Bundle/EvenementsBundle/Resources/views/Admin/Agenda/index.html.twig
+++ b/src/Aml/Bundle/EvenementsBundle/Resources/views/Admin/Agenda/index.html.twig
@@ -10,25 +10,34 @@
 	</div>		
 
 	<div class="span5">
+
+        <div class="container-switch-view pull-right">
+            <a href="{{ path('admin_agenda', {mode:'calendar'}) }}" class="btn{% if mode == 'calendar' %} btn-primary{% endif %}">Calendrier</a>
+            <a href="{{ path('admin_agenda', {mode:'list'}) }}" class="btn {% if mode == 'list' %} btn-primary{% endif %}">Liste</a>
+        </div>
+
 		<h1>Agenda</h1>
-		
-		<a class="btn btn-link pull-right" href="{{ path('admin_agenda_new_event') }}">
-            <i class="icon-plus"></i> Créer un évènement
-        </a>
+
+        <div class="form-actions">
+            <a class="btn btn-link" href="{{ path('admin_agenda_new_event') }}">
+                <i class="icon-plus"></i> Créer un évènement
+            </a>
+        </div>
+
+
 
 
 		{% if mode == 'calendar' %}
-			<a href="{{ path('admin_agenda', {mode:'calendar'}) }}" class="btn btn-primary">Calendrier</a>
-			<a href="{{ path('admin_agenda', {mode:'list'}) }}" class="btn">Liste</a>
+
+
+
 		
 			{# Vue calendrier #}
-		  	{% include "AmlWebBundle::Admin/Agenda/index/agenda.html.twig" %}
-	  	{% elseif mode == 'list' %}	  	
-	  		<a href="{{ path('admin_agenda', {mode:'calendar'}) }}" class="btn">Calendrier</a>
-			<a href="{{ path('admin_agenda', {mode:'list'}) }}" class="btn btn-primary">Liste</a>
+		  	{% include "AmlEvenementsBundle::Admin/Agenda/index/agenda.html.twig" %}
+	  	{% elseif mode == 'list' %}
 		
 			{# Vue liste #}
-		  	{% include "AmlWebBundle::Admin/Agenda/index/list.html.twig" %}
+		  	{% include "AmlEvenementsBundle::Admin/Agenda/index/list.html.twig" %}
 		{% endif %}
 	</div>
 </div>
