--- a/src/Aml/Bundle/EvenementsBundle/Resources/views/Admin/Agenda/index/list.html.twig
+++ b/src/Aml/Bundle/EvenementsBundle/Resources/views/Admin/Agenda/index/list.html.twig
@@ -1,14 +1,15 @@
 {# Template de la vue en mode liste #}
 
 
-<table>
+<table class="table table-bordered table-striped">
 {% for key,day in entities %}
 
-	 <tr> <td colspan="4">{{ key|date('l d M Y')|trans }}</td></tr>
+	 <tr class="uiHeaderSection"> <td colspan="5"><strong>{{ key|date('l d M Y')|trans }}</strong></td></tr>
 	{% for entity in day %}
-	        <tr>          
-	            <td>{{ entity.title }}</td>
-	            <td>le {% if entity.dateStart %}{{ entity.dateStart|date('d/m/Y à H:i') }}{% endif %}</td>
+	        <tr>
+	            <td><strong>{% if entity.dateStart %}{{ entity.dateStart|date('H:i') }}{% endif %}</strong></td>
+                <td>{{ entity.title }}</td>
+                <td>{{ entity.description }}</td>
 	            <td>{{ entity.public|publicStatus }}</td>
 	            <td>
 	                <a class="btn btn-link" href="{{ path('admin_agenda_edit', { 'id': entity.id }) }}"><i class="icon-pencil"></i> Modifier</a>		                   
