--- a/src/Aml/Bundle/WebBundle/Resources/public/css/texte.css
+++ b/src/Aml/Bundle/WebBundle/Resources/public/css/texte.css
@@ -26,7 +26,7 @@ h1 {
 }
 h2, h2 a, h2 a:visited {
 	font-size: 20px;
-	margin-bottom:2px;
+	/*margin-bottom:2px;*/
 	color:#FF0066;
 	text-decoration:none;
 }
