--- a/src/Aml/Bundle/BlogBundle/Resources/views/Admin/Blog/edit.html.twig
+++ b/src/Aml/Bundle/BlogBundle/Resources/views/Admin/Blog/edit.html.twig
@@ -15,7 +15,7 @@
 	<div class="span5">
 		<h1>Blog edit</h1>
 		
-		<form class="form-horizontal" action="{{ path('admin_content_blog_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
+		<form class="form-horizontal" id="blog-add-content" action="{{ path('admin_content_blog_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
             {{ form_row(edit_form.title) }}
             {{ form_row(edit_form.body) }}
             {{ form_row(edit_form.category) }}
@@ -27,14 +27,23 @@
                         {{ form_widget(edit_form.addtags)  }}<button id="blog-button-add-tag" class="btn" type="button"><i class="icon-chevron-right"></i></button>
                     </div>
                     {% set tagDataPrototype = '<span>__name__</span><button class="close" >&times;</button><input type="hidden" name="aml_bundle_BlogBundle_blogtype[tags][]" value="__id__" />' %}
-                    <div id="tumblr_tags" class="tags pull-right manage-tags" data-prototype="{{ tagDataPrototype }}">
+                    <div id="blog_tags" class="tags pull-right manage-tags" data-prototype="{{ tagDataPrototype }}">
+
+                        {% for tag in entity.tags %}
+                            <div class="tag-item alert alert-info">
+                                <span>{{ tag.name }}</span>
+                                <button class="close" >&times;</button><input type="hidden" name="aml_bundle_BlogBundle_blogtype[tags][]" value="{{ tag.id }}" />
+                            </div>
+                        {% endfor %}
 
                     </div>
 
                 </div>
             </div>
 
-            {{ form_rest(edit_form) }}
+            {{ form_row(edit_form.public) }}
+
+            {{form_row(edit_form._token)}}
 		    <div class="form-actions">
                 <a class="btn btn-link" href="{{ path('admin_content_blog') }}">
                     <i class="icon-arrow-left"></i> Retour à la liste des articles
@@ -58,3 +67,38 @@
   	{% include "AmlWebBundle::Admin/Partial/ckeditor.html.twig" with {'target': 'aml_bundle_BlogBundle_blogtype_body'}  %}
 
 {% endblock body %}
+
+{% block javascripts %}
+    {{ form_javascript(edit_form) }}
+
+    <script src="{{ asset('bundles/amlblog/js/manageTags.js') }}" type="text/javascript"></script>
+    <script type="text/javascript">
+        tags.urlLoadTag = '{{ url('blog_tags_load_item') }}';
+
+        tags.init = function(){
+            this.form = $('#tumblr-add-content');
+            this.containerSelectedTags = $('#container-selected-tags');
+
+            // Get the div that holds the collection of tags
+            this.collectionHolder = $('#blog_tags');
+
+            // count the current form inputs we have (e.g. 2), use that as the new
+            // index when inserting a new item (e.g. 2)
+            this.collectionHolder.data('index', this.collectionHolder.find(':input').length);
+            this.tags = new Array();
+
+            this.addTagButton = $('#blog-button-add-tag');
+            this.autocompleteField = $('#autocompleter_aml_bundle_BlogBundle_blogtype_addtags');
+            this.removeTagButton = this.collectionHolder.find('button.close');
+
+            this.observeAddTag();
+            this.observeRemoveTag();
+        };
+
+        tags.init();
+    </script>
+{% endblock javascripts %}
+
+{% block stylesheets %}
+    {{ form_stylesheet(edit_form) }}
+{% endblock %}
