--- a/src/Aml/Bundle/WebBundle/Resources/views/Admin/Partial/pagination.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Admin/Partial/pagination.html.twig
@@ -1,4 +1,5 @@
 {# Pagination #}
+{% if pagination.nbPages > 1 %}
 <div class="pagination pagination-centered">
 		<ul>	
 			{% if pagination.currentPage > 1 %}						
@@ -20,5 +21,5 @@
 				<li class=""><a class="active" title="Aller à la dernière page" href="{{ path(currentRoot, { 'page': pagination.lastPage }) }}">dernier&nbsp;»</a></li>
 			{% endif %}
 		</ul>
-		
 </div>
+{% endif %}
