--- a/src/Aml/Bundle/WebBundle/Resources/views/Admin/Default/index.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Admin/Default/index.html.twig
@@ -19,6 +19,11 @@
     		<p><a class="btn" href="#">Gérer les contenus »</a></p>
     	</div>
     	<div class="span4">
+    		<h2>Gestion des partenaires</h2>
+    		<p>Permet de gérer la liste des partenaires du site.</p>
+    		<p><a class="btn" href="{{ path('admin_partenaire') }}">Gérer les partenaires »</a></p>
+    	</div>
+    	<div class="span4">
     		<h2>Agenda</h2>
     		<p>Permet de gérer les évènements du site : concerts, répétitions et les réunions.</p>
     		<p><a class="btn" href="{{ path('admin_agenda', {mode:'calendar'}) }}">Agenda »</a></p>
