--- a/src/Aml/Bundle/BlogBundle/Resources/views/Admin/Blog/edit.html.twig
+++ b/src/Aml/Bundle/BlogBundle/Resources/views/Admin/Blog/edit.html.twig
@@ -13,7 +13,7 @@
 	</div>
 
 	<div class="span5">
-		<h1>Blog edit</h1>
+		<h1>Modification de l'article</h1>
 		
 		<form class="form-horizontal" id="blog-add-content" action="{{ path('admin_content_blog_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
             {{ form_row(edit_form.title) }}
@@ -24,10 +24,11 @@
                 <label class="control-label" for="tumblr_addtags">{{ form_label(edit_form.addtags)  }}</label>
                 <div class="controls manage-tags-container">
                     <div class="input-append manage-tags">
-                        {{ form_widget(edit_form.addtags)  }}<button id="blog-button-add-tag" class="btn" type="button"><i class="icon-chevron-right"></i></button>
+                        {{ form_widget(edit_form.addtags)  }}<button id="blog-button-add-tag" class="btn" type="button">
+                            <i class="icon-plus"></i></button>
                     </div>
                     {% set tagDataPrototype = '<span>__name__</span><button class="close" >&times;</button><input type="hidden" name="aml_bundle_BlogBundle_blogtype[tags][]" value="__id__" />' %}
-                    <div id="blog_tags" class="tags pull-right manage-tags" data-prototype="{{ tagDataPrototype }}">
+                    <div id="blog_tags" class="tags manage-tags" data-prototype="{{ tagDataPrototype }}">
 
                         {% for tag in entity.tags %}
                             <div class="tag-item alert alert-info">
