--- a/src/Aml/Bundle/EvenementsBundle/Resources/views/Admin/Agenda/new.html.twig
+++ b/src/Aml/Bundle/EvenementsBundle/Resources/views/Admin/Agenda/new.html.twig
@@ -16,6 +16,7 @@
 	<h1>Créer un évènement</h1>
 
 	<form class="form-horizontal" action="{{ path('content_agenda_create') }}" method="post" {{ form_enctype(form) }}>
+	    {{ form_errors(form) }}
 	    {{ form_widget(form) }}
 	   <div class="form-actions">
 	   		<a href="{{ path('admin_agenda') }}" class="btn btn-link" title="Retourner à la liste des évènements">
@@ -37,7 +38,7 @@
 {% endblock body %}
 
 {% block javascripts %}
-	
+
 	<script src="{{ asset('bundles/amlweb/js/bootstrap/bootstrap-datepicker.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/amlweb/js/bootstrap/locales/bootstrap-datepicker.fr.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/amlweb/js/bootstrap/bootstrap-timepicker.js') }}" type="text/javascript"></script>
