--- a/src/Aml/Bundle/EvenementsBundle/Resources/views/Agenda/index.html.twig
+++ b/src/Aml/Bundle/EvenementsBundle/Resources/views/Agenda/index.html.twig
@@ -15,7 +15,7 @@
         <div id="agenda-concerts-public">
         {% for key,day in entities %}
             <div>
-                <div class="uiHeaderSection"><strong><i class="icon-calendar"></i> {{ key|date('l d M Y')|trans }}</strong></div>
+                <div class="uiHeaderSection"><strong><i class="icon-calendar"></i> {{ key | format_datetime(null, 'fr', 'Europe/Paris',  constant('IntlDateFormatter::LONG'), constant('IntlDateFormatter::SHORT')) }}</strong></div>
                 {% for entity in day %}
                     <div class="event-item">
                         <div class="event-item-structure event-item-container-thumbnail">
