- Mise à jour composer.phar - Ajout de Sonata Admin Bundle - Création bundle AmlMediasBundle - correction twig sur la home (Dernier article / dernier album ) - ajout nouveau logo

--- a/src/Aml/Bundle/WebBundle/Resources/views/Admin/Partenaire/edit.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Admin/Partenaire/edit.html.twig
@@ -18,7 +18,7 @@
             {{ form_widget(edit_form) }}
 
             <div class="form-actions">
-                <a href="{{ path('admin_agenda') }}" class="btn btn-link" title="Retourner à la liste des évènements">
+                <a href="{{ path('admin_agenda') }}" class="btn btn-link" title="Retourner à la liste des partenaires">
                     <i class="icon-arrow-left"></i>
                     retour à la liste des partenaires
                 </a>
