--- a/src/Aml/Bundle/WebBundle/Resources/views/Default/album.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Default/album.html.twig
@@ -1,3 +1,4 @@
+{% if lastAlbum  %}
 <div id="discographie-last-album-block">
 	<div class="disc-pochette-list">
 		image
@@ -14,4 +15,5 @@
 		
 			
 	</div>	
-</div>		
+</div>
+{% endif %}
