--- a/src/Aml/Bundle/WebBundle/Resources/views/Partial/header.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Partial/header.html.twig
@@ -4,15 +4,15 @@
 	{% if app.request.attributes.get('_route') == 'home' %} 			
 	<h1 id="logo">
 		<span>Avenir Musical du Limousin</span>
-		<a href="{{ path('home') }}" title="Avenir Musical du Limousin">
-      		<img src="{{ asset('bundles/amlweb/images/aml_logo.png') }}" alt="Avenir Musical du Limousin"  />
+		<a href="{{ path('home') }}" title="AML 87">
+      		<img src="{{ asset('bundles/amlweb/images/logo_aml87_test.png') }}" height="149" alt="AML 87"  />
       	</a>
 	</h1>
 	{% else %} 	
 	<div id="logo">
 		<span>Avenir Musical du Limousin</span>
-		<a href="{{ path('home') }}" title="Avenir Musical du Limousin">
-    		<img src="{{ asset('bundles/amlweb/images/aml_logo.png') }}" alt="Avenir Musical du Limousin"  />
+		<a href="{{ path('home') }}" title="AML 87">
+    		<img src="{{ asset('bundles/amlweb/images/logo_aml87_test.png') }}" height="149" alt="AM7 87"  />
     	</a>
 	</div>
 	{% endif %} 
