--- a/src/Aml/Bundle/WebBundle/Resources/views/Default/article.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Default/article.html.twig
@@ -1,24 +1,26 @@
+{% if lastBlogArticle  %}
 <div id="blog-last-article-block" class="blog-article">
 	<h3>
-		<a href="{{ path('blog_show', { 'id': lastBlogArticle.id }) }}" title="Voir l'article : {{ lastBlogArticle.title }}" >{{ lastBlogArticle.title }}</a>		
+		<a href="{{ path('blog_show', { 'id': lastBlogArticle.id }) }}" title="Voir l'article : {{ lastBlogArticle.title }}" >{{ lastBlogArticle.title }}</a>
 	</h3>
-	
+
 	<div class="publi-info">
-		<span>Publié le 
-			<span class="date-article-block">le {% if lastBlogArticle.created %}{{ lastBlogArticle.created|date('d/m/Y à H:i') }}{% endif %}</span>		
+		<span>Publié le
+			<span class="date-article-block">le {% if lastBlogArticle.created %}{{ lastBlogArticle.created|date('d/m/Y à H:i') }}{% endif %}</span>
 			{% if lastBlogArticle.category.name %}
 				 dans <a href="{{ path('blog',{'category' : lastBlogArticle.category.systemName}) }}" title="{{lastBlogArticle.category.name}}">{{lastBlogArticle.category.name}}</a>
 			{% endif %}
 		</span>
 	</div>
-		
+
 	<p class="container-wysiwyg">
 		{{lastBlogArticle.body|raw}}
 	</p>
-	
-	<span class="blog-tags">Mots clés : </span>	
+
+	<span class="blog-tags">Mots clés : </span>
 	{% for key,tag in lastBlogArticle.tags %}
-		{% if key > 0 %}, {% endif %}<a class="active" title="{{ tag.description }}" href="{{ path('blog',{'tag' : tag.systemName}) }}">{{ tag.name }}</a>		
+		{% if key > 0 %}, {% endif %}<a class="active" title="{{ tag.description }}" href="{{ path('blog',{'tag' : tag.systemName}) }}">{{ tag.name }}</a>
 	{% endfor %}
-	
+
 </div>
+{% endif %}
