- Suppression bundle demo Acme - Déplacement formulaire file dans le bundle medias

--- a/src/Aml/Bundle/WebBundle/Resources/public/css/form.css
+++ b/src/Aml/Bundle/WebBundle/Resources/public/css/form.css
@@ -14,3 +14,8 @@
 .captcha .form-item{
 	width: auto !important;
 }
+
+/*#aml_bundle_webbundle_partenairetype_logo{
+    clear: both;
+    margin: 0 0 0 10%;
+}*/
