--- a/src/Aml/Bundle/WebBundle/Resources/views/Admin/Partenaire/edit.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Admin/Partenaire/edit.html.twig
@@ -15,7 +15,13 @@
         <h1>Edition d'un partenaire</h1>
 
         <form class="form-horizontal" action="{{ path('admin_partenaire_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
-            {{ form_widget(edit_form) }}
+            {{ form_row(edit_form.name) }}
+            {{ form_row(edit_form.url) }}
+
+                {{ form_row(edit_form.logo.file) }}
+
+
+            {{ form_rest(edit_form) }}
 
             <div class="form-actions">
                 <a href="{{ path('admin_agenda') }}" class="btn btn-link" title="Retourner à la liste des partenaires">
