--- a/src/Aml/Bundle/WebBundle/Resources/views/Admin/layout.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Admin/layout.html.twig
@@ -29,7 +29,8 @@
     <link rel="apple-touch-icon-precomposed" href="{{ asset('bundles/amlweb/ico/apple-touch-icon-57-precomposed.png') }}">
     
     <link href="{{ asset('bundles/amlweb/css/admin.css') }}" rel="stylesheet">
-    
+    <link href="{{ asset('bundles/amlweb/css/form.css') }}" rel="stylesheet">
+
     <link href="{{ asset('bundles/amlweb/css/fullcalendar/fullcalendar.css') }}" rel="stylesheet">
 	<link href="{{ asset('bundles/amlweb/css/fullcalendar/fullcalendar.print.css') }}" rel="stylesheet">
     {% block stylesheets %}{% endblock %}
