--- a/src/Aml/Bundle/WebBundle/Resources/views/Admin/Partenaire/new.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Admin/Partenaire/new.html.twig
@@ -3,7 +3,7 @@
 {% form_theme form 'AmlWebBundle:Form:aml_theme.html.twig' %}
 
 {% block title -%}
-    Créer un évènement
+    Partenaires - Créer un nouveau partenaire
 {%- endblock title %}
 
 {% block body %}
