#11 - sépération titre + affichage full screen "span12"

--- a/src/Aml/Bundle/WebBundle/Resources/views/Admin/Album/edit.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Admin/Album/edit.html.twig
@@ -1,14 +1,13 @@
 {% extends "AmlWebBundle::Admin/layout.html.twig" %}
 
 {% block title -%}
-    Discrographie
+    Discrographie - Album "{{ edit_form.title }}"
 {%- endblock title %}
 
 {% block body %}
 <div class="row-fluid">
 
-	<div class="span5">
-		<h1>Album edit</h1>
+	<div class="span12">
 
 		<form action="{{ path('content_album_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
 		
