--- a/src/Aml/Bundle/WebBundle/Resources/views/Admin/Medias/index.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Admin/Medias/index.html.twig
@@ -1,15 +1,13 @@
 {% extends "AmlWebBundle::Admin/layout.html.twig" %}
 
 {% block title -%}
-    Discrographie
+    Gestion des médias
 {%- endblock title %}
 
 {% block body %}
 <div class="row-fluid">
 
-	<div class="span5">
-	
-		<h1>Gestion des médias</h1>
+	<div class="span12">
 
 		<table class="table table-bordered table-striped">
 		    <thead>
