--- a/src/Aml/Bundle/WebBundle/Resources/views/Admin/Medias/new.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Admin/Medias/new.html.twig
@@ -4,17 +4,15 @@
 
 {% block title -%}
 
-    Blog - Créer un nouvel article de blog
+    Blog - {{ entity.type["label"] }}
 
 {%- endblock title %}
 
 {% block body %}
 <div class="row-fluid">
 
-	<div class="span5">
+	<div class="span12">
 
-		<h1>{{ entity.type["label"] }}</h1>
-		
 		<form class="form-horizontal form-container" action="{{ path('admin_file_create',{'type': type} ) }}" method="post" {{ form_enctype(form) }}>
 		    <fieldset>
 			    <legend>Legend</legend>
