--- a/src/Aml/Bundle/WebBundle/Resources/views/Admin/Medias/show.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Admin/Medias/show.html.twig
@@ -2,17 +2,15 @@
 
 {% block title -%}
 
-    Blog - Créer un nouvel article de blog
+    File
 
 {%- endblock title %}
 
 {% block body %}
 <div class="row-fluid">
 
-	<div class="span5">
-	
-		<h1>File</h1>
-		
+	<div class="span12">
+
 		<table class="record_properties">
 		    <tbody>
 		        <tr>
