--- a/src/Aml/Bundle/WebBundle/Resources/views/Admin/layout.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Admin/layout.html.twig
@@ -54,7 +54,7 @@
                     <div class="pull-left header">
                         <h3 class="title">
                             <i class="icon-dashboard"></i>
-                            Dashboard
+                            {{ block('title') }}
                         </h3>
                         <h5>
                             A subtitle can be added here
