--- a/src/Aml/Bundle/WebBundle/Resources/views/Admin/Album/index.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Admin/Album/index.html.twig
@@ -1,14 +1,13 @@
 {% extends "AmlWebBundle::Admin/layout.html.twig" %}
 
 {% block title -%}
-    Discrographie
+    Discrographie - Liste des albums
 {%- endblock title %}
 
 {% block body %}
 <div class="row-fluid">
 
-	<div class="span5">
-		<h1>Liste des albums</h1>
+	<div class="span12">
 
         <div class="form-actions">
             <a class="btn btn-link" href="{{ path('content_album_new') }}">
