--- a/src/Aml/Bundle/BlogBundle/Resources/views/Admin/Blog/edit.html.twig
+++ b/src/Aml/Bundle/BlogBundle/Resources/views/Admin/Blog/edit.html.twig
@@ -1,19 +1,13 @@
 {% extends "AmlWebBundle::Admin/layout.html.twig" %}
 
 {% form_theme edit_form 'AmlWebBundle:Form:aml_theme.html.twig' %}
-{% block title -%}Blog - Créer un nouvel article de blog{%- endblock title %}
+{% block title -%}Blog - Modification de l'article{%- endblock title %}
 
 {% block body %}
 
 <div class="row-fluid">
 
-	<div class="span3">
-		{# Barre de navigation left #}
-	  	{% include "AmlWebBundle::Admin/Navigation/content_subnav.html.twig" %}  
-	</div>
-
-	<div class="span5">
-		<h1>Modification de l'article</h1>
+	<div class="span12">
 		
 		<form class="form-horizontal" id="blog-add-content" action="{{ path('admin_content_blog_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
             {{ form_row(edit_form.title) }}
